src/sass/_forms.scss
.create-instance,
.edit-instance,
.create-network,
.create-storage-pool,
.edit-storage-pool,
.edit-network,
.create-profile,
.edit-profile,
.create-project,
.edit-project,
.edit-snapshot-config,
.cluster-group-form,
.storage-volume-form,
.edit-storage-volume,
.volume-create-form {
  padding-bottom: 0;

  .p-notification--caution {
    background-image: none;
    border: 0;
    padding-left: $spv--large;
  }

  .form {
    display: flex;

    .form-navigation {
      min-width: 14rem;
      overflow: auto;

      .p-side-navigation__link {
        justify-content: flex-start;
        margin-bottom: 0;
        min-width: 13rem;
        text-align: left;
      }

      .has-error::before {
        content: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Ccircle stroke='%23c7162b' stroke-width='1.5' fill='%23c7162b' cx='8' cy='8' r='6.25'/%3E%3Cpath fill='%23fff' fill-rule='nonzero' d='M10.282 4.638l1.06 1.06L9.05 7.99l2.293 2.292-1.06 1.06L7.99 9.05 5.7 11.343l-1.06-1.06 2.29-2.293L4.64 5.7l1.06-1.06 2.291 2.29z'/%3E%3C/g%3E%3C/svg%3E");
        left: 1.5rem;
        position: absolute;
        top: 0.3rem;
        z-index: 1;
      }
    }

    .form-contents {
      overflow: auto hidden;
      padding-left: 2.5rem;

      .content-details {
        max-width: 54rem;
      }
    }

    .network-device {
      display: flex;

      > :first-child {
        flex-grow: 1;
        margin-right: $sph--large;
      }
    }

    .image-change-link {
      align-self: end;
      margin-bottom: 6px;
    }

    .image-select-button {
      align-self: end;
    }

    .profile-select {
      column-gap: 1.5rem;
      display: grid;
      grid-template-columns: 6fr 6fr;

      @include large {
        grid-template-columns: 8fr 4fr;
      }
    }

    .profile-actions {
      display: flex;

      .profile-action-btn {
        margin-right: $sph--large;
      }
    }

    .profile-remove-btn {
      align-self: flex-start;
      margin-left: $sph--large;
    }

    .profile-add-btn {
      display: block;
    }

    .delete-device {
      margin-top: $spv--x-large;
    }
  }

  .is-disabled {
    cursor: not-allowed;
    opacity: 0.33;
  }

  @include mobile-and-tablet {
    .form {
      margin-top: 13px;
    }
  }

  @media screen and (width <=1400px) {
    .cpu-limit-label,
    .memory-limit-label {
      display: block !important;

      > * {
        margin-right: 0 !important;
      }
    }
  }

  .read-only .monaco-editor .cursors-layer > .cursor {
    display: none !important;
  }

  .cpu-limit-label,
  .ip-address-selector,
  .memory-limit-label {
    align-items: flex-end;
    display: flex;

    > * {
      margin-bottom: $spv--large;
      margin-right: $sph--x-large;
    }

    > :last-child {
      flex-grow: 1;
      margin-right: 0;
    }
  }

  .ip-address-custom {
    align-items: flex-start;

    > :nth-child(2) {
      margin-left: -1.5rem;
      margin-top: -5px;
    }

    .p-radio__label {
      font-size: 0;
    }
  }

  .snapshot-schedule {
    > * {
      margin-bottom: $spv--large;
    }
  }

  .memory-limit-with-unit {
    display: flex;

    > :first-child {
      flex-grow: 1;
      margin-right: $sph--large;
    }

    .p-form__group {
      margin-top: 0;
    }

    input {
      min-width: 0;
    }

    select {
      margin-top: 0;
      min-width: 0;
      width: 6rem;
    }
  }

  .cloud-init-config {
    .code-editor-wrapper {
      max-height: 35vh;
      min-height: 7.5rem;
    }
  }

  .checkbox-label-tooltip {
    > span {
      display: inherit !important;
      margin-left: $sph--x-small;
    }
  }

  .device-name {
    display: flex;
  }

  .device-details {
    margin-bottom: 3rem;
    margin-left: 3rem;
    max-width: 30rem;
  }

  .configuration-table {
    margin-bottom: $spv--x-large;
  }

  .cloud-init {
    .configuration {
      width: 9rem;
    }

    .inherited {
      width: auto;
    }

    .override {
      width: auto;
    }

    .override-form {
      align-items: flex-end;
      flex-direction: column;

      > :first-child {
        width: 100%;
      }
    }
  }

  .device-form {
    .configuration {
      padding-left: 0;
      width: 8rem;
    }

    .inherited {
      width: 11rem;
    }

    .p-form-help-text,
    .p-form-help-text > * {
      margin-bottom: 0;
    }
  }

  .inherited-devices {
    th.override > * {
      display: none;
    }

    tbody .configuration {
      > :first-child {
        margin-left: $sph--x-large;
      }
    }

    .device-name {
      margin-left: 0 !important;
    }
  }

  .custom-devices {
    .custom-devices-heading {
      border-bottom: $border;
      padding-bottom: $spv--large;
    }

    .custom-device-name .configuration {
      overflow: visible;
    }

    thead {
      display: none;
    }

    tbody .configuration {
      > :first-child {
        margin-left: $sph--x-large;
      }
    }

    .device-name {
      margin-left: 0 !important;
    }
  }

  .yaml-switch {
    margin-left: $sph--x-large;
  }
}

.p-panel__content:has(.edit-instance),
.p-panel__content:has(.edit-profile) {
  padding-bottom: 0;
}

.image-select-modal {
  > section {
    min-height: 100%;
  }

  .image-select-filters {
    height: 100%;
    margin-right: 2rem;
  }

  @include mobile-and-tablet {
    .image-select-filters {
      display: none;
    }
  }

  .table-image-select {
    .u-row:hover {
      background-color: $colors--light-theme--background-hover;
      cursor: pointer;
    }

    th,
    td {
      &:nth-child(1) {
        width: 7rem;
      }

      &:nth-child(2) {
        width: 5rem;
      }

      &:nth-child(3) {
        width: 7rem;
      }

      &:nth-child(4) {
        width: 6rem;
      }

      &:nth-child(5) {
        width: 9rem;
      }

      &:nth-child(6) {
        width: 6rem;
      }

      &:nth-child(7) {
        width: 6rem;
      }
    }
  }

  .image-select-header {
    display: flex;

    > :first-child {
      flex-grow: 1;
    }
  }

  .image-list {
    max-height: calc(100vh - 140px);
    overflow-y: hidden;
  }

  @include large {
    .search-image,
    .iso-btn {
      margin-top: calc(2.5rem + 3px);
      max-width: 30rem;
    }

    .image-list {
      max-height: calc(100vh - 220px);
    }
  }

  @include extra-large {
    .image-list {
      max-height: calc(100vh - 250px);
    }
  }
}

.create-instance {
  .base-image {
    align-items: center;
    display: flex;
    flex-wrap: wrap;

    .image-name {
      flex-grow: 1;
      margin-right: 1rem;
    }
  }
}

.volume-create-form {
  overflow: auto;
  padding-right: $sph--large;
}

.details-form-wrapper {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.create-instance,
.create-network,
.create-profile,
.create-project,
.edit-project,
.create-storage-pool,
.storage-volume-form {
  .bottom-btns {
    margin-top: 1rem;
    max-width: 72rem;
    min-height: 3.5rem;
    padding-right: 1.5rem;
  }

  .form {
    max-width: 72rem;
  }

  .form-contents:has(.code-editor-wrapper) {
    padding-left: 1.5rem;
  }
}

.edit-instance,
.edit-network,
.edit-profile,
.edit-storage-pool,
.edit-storage-volume {
  .bottom-btns {
    margin-top: 1rem;
    max-width: 70.5rem;
    min-height: 3.5rem;
  }

  .form {
    max-width: 70.5rem;
  }

  .form-contents:has(.code-editor-wrapper) {
    padding-left: 0;
  }
}

